@@ -1,7 +1,19 @@
 #!/bin/sh
 cd $1
+if [ -f update.tgz.sha256sum ];
+then
+  #Check archive against checksum!
+  valid=$(sha256sum -c update.tgz.sha256sum | grep update.tgz | cut -d':' -f2 | tr -d ' ')
+  if [ $valid != "OK" ]
+  then
+	echo "Archive checksum mismatch !";
+	exit 1;
+  fi
+fi 
+
 tar xfz update.tgz
 rm update.tgz
+rm update.tgz.sha256sum
 
 lowercase(){
     echo "$1" | sed "y/ABCDEFGHIJKLMNOPQRSTUVWXYZ/abcdefghijklmnopqrstuvwxyz/"
